Updated some comments to be more clear

--- a/Steve-AI.ipynb
+++ b/Steve-AI.ipynb
@@ -83,11 +83,11 @@
     "def get_users_posts(screen_name, posts_to_return=12):\n",
     "    url = \"https://fresh-linkedin-profile-data.p.rapidapi.com/get-profile-posts\"\n",
     "\n",
-    "    querystring = {\"linkedin_url\": f\"https://www.linkedin.com/in/{screen_name}/\", \"type\": \"posts\"}  \n",
+    "    querystring = {\"linkedin_url\": f\"https://www.linkedin.com/in/{screen_name}/\", \"type\": \"posts\"}   # replace with your LinkedIn URL\n",
     "    \n",
     "    headers = {\n",
-    "\t\"X-RapidAPI-Key\": \"32f02555b4msh1c3870084fe2046p1775cdjsn916d5b80e578\",\n",
-    "\t\"X-RapidAPI-Host\": \"fresh-linkedin-profile-data.p.rapidapi.com\"\n",
+    "\t\"X-RapidAPI-Key\": \"abc123\", # replace with your API key\n",
+    "\t\"X-RapidAPI-Host\": \"somehost.com\" # replace with your host\n",
     "    }\n",
     "\n",
     "    response = requests.get(url, headers=headers, params=querystring)\n",
