--- a/Steve-AI.ipynb
+++ b/Steve-AI.ipynb
@@ -144,7 +144,7 @@
     "\n",
     "% TONE\n",
     " - Don't use any emojis or hashtags.\n",
-    " - Respond in the tone of Steve Chambers\n",
+    " - Respond in the tone of <insert name>\n",
     "\n",
     "% START OF EXAMPLE POSTS TO MIMIC\n",
     "{example_posts}\n",
@@ -255,7 +255,7 @@
     " - Your goal is to write content with the tone that is described below.\n",
     " - Do not go outside the tone instructions below\n",
     " - Do not use hashtags or emojis\n",
-    " - Respond in the tone of Steve Chambers\n",
+    " - Respond in the tone of <insert name>\n",
     "\n",
     "% Description of the authors tone:\n",
     "{authors_tone_description}\n",
