Bug fixes, general clean up, and much needed documentation

--- a/Steve-AI.ipynb
+++ b/Steve-AI.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7fe4d823",
+   "metadata": {},
+   "source": [
+    "# What is this application doing?\n",
+    "\n",
+    "In the below program, I am reading in a subset of LinkedIn posts by a given author, filtering down to the top X number of most upvoted posts (sorted in descending order). I then take that context, and ask OpenAI (using GPT4 for now, but may see if newest version of GPT4 does any better than the old one, old one, sheesh that's funny to say) to evaluate it and judge style/tone/etc. GPT comes back with 25 ways to measure it, and I then ask GPT4 to evaluate the 25 posts across those 25 properties, to sinmulate to the best of it's ability, the user in question, and write a short trivial post about eating a sandwich in the park. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4c2832b",
+   "metadata": {},
+   "source": [
+    "### Installing Required Packagages"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "50f20bb1-c88d-4b94-b05f-82252f109137",
@@ -13,12 +31,20 @@
    },
    "outputs": [],
    "source": [
-    "%pip install langchain python-dotenv"
+    "%pip install langchain python-dotenv openai"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a517573",
+   "metadata": {},
+   "source": [
+    "### Importing Required Libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "id": "e65bd69a",
    "metadata": {},
    "outputs": [
@@ -28,7 +54,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,8 +78,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "38f9e600",
+   "metadata": {},
+   "source": [
+    "### Setting our OpenAI API Key"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "98123655",
    "metadata": {
     "hide_input": false
@@ -64,8 +98,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "77f65ce3",
+   "metadata": {},
+   "source": [
+    "### Creating our LLM Object"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "id": "063daa43",
    "metadata": {},
    "outputs": [],
@@ -74,20 +116,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4f40ecb8",
+   "metadata": {},
+   "source": [
+    "### Definining our Function to get User Posts from LinkedIn\n",
+    "\n",
+    "In the below cell, I used RapidAPI to featch LinkedIn posts by profile, you could easily swap out something related to Twitter/X, or even substitute reading from a file. Replace the code below with whatever makes sense for you. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 45,
    "id": "9c2b68b9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_users_posts(screen_name, posts_to_return=12):\n",
+    "def get_users_posts(screen_name, posts_to_return):\n",
     "    url = \"https://fresh-linkedin-profile-data.p.rapidapi.com/get-profile-posts\"\n",
     "\n",
-    "    querystring = {\"linkedin_url\": f\"https://www.linkedin.com/in/{screen_name}/\", \"type\": \"posts\"}   # replace with your LinkedIn URL\n",
+    "    querystring = {\"linkedin_url\": f\"https://www.linkedin.com/in/jakemakler/\", \"type\": \"posts\"}   # replace with your LinkedIn URL\n",
     "    \n",
     "    headers = {\n",
-    "\t\"X-RapidAPI-Key\": \"abc123\", # replace with your API key\n",
-    "\t\"X-RapidAPI-Host\": \"somehost.com\" # replace with your host\n",
+    "\t\"X-RapidAPI-Key\": os.getenv('X_RAPIDAPI_KEY'), # replace with your API key\n",
+    "\t\"X-RapidAPI-Host\": os.getenv('X_RAPIDAPI_HOST') # replace with your host\n",
     "    }\n",
     "\n",
     "    response = requests.get(url, headers=headers, params=querystring)\n",
@@ -111,23 +163,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
+   "id": "2f8d599f",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "user_screen_name = 'sean-fay-mba-8a598b9'  # Replace this with the desired user's screen name\n",
-    "users_tweets = get_users_posts(user_screen_name)"
+    "### Calling `get_user_posts` for our Target User"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ad15d0f",
    "metadata": {},
    "outputs": [],
    "source": [
+    "user_screen_name = 'testuser'  # Replace this with the desired user's screen name\n",
+    "example_posts = get_users_posts(user_screen_name, 25) # change the # of example posts to grab\n",
     "print(example_posts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e112a209",
+   "metadata": {},
+   "source": [
+    "### Our First LLM Template\n",
+    "\n",
+    "This is just trying to mimic without first evaluating the users style, just matching (first level of effort)."
    ]
   },
   {
@@ -164,17 +225,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8a7b8b12",
+   "cell_type": "markdown",
+   "id": "bdcf7f80",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "class ChatOpenAI:\n",
-    "    def predict(self, prompt):\n",
-    "        # implementation of the predict method\n",
-    "        return \"prediction\"\n",
-    "print (output)"
+    "### Let's Dig Deeper\n",
+    "\n",
+    "Asking GPT4 to generate a list of style and tone attributes"
    ]
   },
   {
@@ -197,13 +254,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "94345252",
+   "metadata": {},
+   "source": [
+    "### Our Function to Get the Authors Tone\n",
+    "\n",
+    "This function takes in the list of attributes from above, and combines it with our example posts from above, to evaluate the authors tone and style, (level 2 effort) to better mimic the user."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "id": "8b1a75c5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_authors_tone_description(how_to_describe_tone, sorted_posts):\n",
+    "def get_authors_tone_description(how_to_describe_tone, example_posts):\n",
     "    template = \"\"\"\n",
     "        You are an AI Bot that is very good at generating writing in a similar tone as examples.\n",
     "        Be opinionated and have an active voice.\n",
@@ -213,22 +280,30 @@
     "        {how_to_describe_tone}\n",
     "\n",
     "        % START OF EXAMPLES\n",
-    "        {sorted_posts}\n",
+    "        {example_posts}\n",
     "        % END OF EXAMPLES\n",
     "\n",
     "        List out the tone qualities of the examples above\n",
     "        \"\"\"\n",
     "\n",
     "    prompt = PromptTemplate(\n",
-    "        input_variables=[\"how_to_describe_tone\", \"sorted_posts\"],\n",
+    "        input_variables=[\"how_to_describe_tone\", \"example_posts\"],\n",
     "        template=template,\n",
     "    )\n",
     "\n",
-    "    final_prompt = prompt.format(how_to_describe_tone=how_to_describe_tone, sorted_posts=sorted_posts)\n",
+    "    final_prompt = prompt.format(how_to_describe_tone=how_to_describe_tone, example_posts=example_posts)\n",
     "\n",
     "    authors_tone_description = llm.predict(final_prompt)\n",
     "\n",
     "    return authors_tone_description"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3160160",
+   "metadata": {},
+   "source": [
+    "### Calling our new Function"
    ]
   },
   {
@@ -238,41 +313,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "authors_tone_description = get_authors_tone_description(how_to_describe_tone, sorted_posts)\n",
+    "authors_tone_description = get_authors_tone_description(how_to_describe_tone, example_posts)\n",
     "print (authors_tone_description)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e4df9f67",
+   "metadata": {},
+   "source": [
+    "### This is where things get interesting\n",
+    "\n",
+    "In this block we are taking it to level 3 effort, mixing our tone/style descriptions, example posts, and some specific prompting to get us the \"ultimate\" ghost writer. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "id": "a99dee96",
    "metadata": {},
    "outputs": [],
    "source": [
     "template = \"\"\"\n",
     "% INSTRUCTIONS\n",
-    " - You are an AI Bot that is very good at mimicking an author writing style.\n",
+    " - You are an AI Bot that is very good at mimicking an authors writing style.\n",
     " - Your goal is to write content with the tone that is described below.\n",
     " - Do not go outside the tone instructions below\n",
     " - Do not use hashtags or emojis\n",
-    " - Respond in the tone of <insert name>\n",
+    " - Respond in the tone of Jake Makler\n",
     "\n",
     "% Description of the authors tone:\n",
     "{authors_tone_description}\n",
     "\n",
     "% Authors writing samples\n",
-    "{sorted_posts}\n",
+    "{example_posts}\n",
     "\n",
     "% YOUR TASK\n",
     "Please create a LinkedIn about going to the park and eating a sandwich.\n",
     "\"\"\"\n",
     "\n",
     "prompt = PromptTemplate(\n",
-    "    input_variables=[\"authors_tone_description\", \"sorted_posts\"],\n",
+    "    input_variables=[\"authors_tone_description\", \"example_posts\"],\n",
     "    template=template,\n",
     ")\n",
     "\n",
-    "final_prompt = prompt.format(authors_tone_description=authors_tone_description, sorted_posts=sorted_posts)"
+    "final_prompt = prompt.format(authors_tone_description=authors_tone_description, example_posts=example_posts)"
    ]
   },
   {
